create template of contact page

--- a/style.css
+++ b/style.css
@@ -74,3 +74,7 @@ img{
 .lower-side img{
     width: 0px;
 }
+/* designing contactus template page  */
+.contact-template{
+    border: 2px solid yellowgreen;
+}
