--- a/style.css
+++ b/style.css
@@ -139,3 +139,13 @@ margin-bottom: 20px;
 h1,h2{
     color: rgba(240, 138, 167, 0.89);
 }
+/* 404page design  */
+.pagenotfound{
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    color: rgb(3, 80, 148);
+    margin-top: 40px;
+    padding: 40px;
+    background-color: rgb(107, 250, 107);
+}
